# experiments

./: .gitignore  README.md  pyproject.toml
3d/: README.md  web-viz-experiments.blend
3d/gltf/: blender-cube.gltf  chatgpt.gltf  red_sphere.py
3d/usd/: blender-cube.usda  football.usda  sphere.usda
hello-grasshopper/: HelloGrasshopper.csproj  HelloGrasshopperComponent.cs  HelloGrasshopperInfo.cs  README.md  hello-grasshopper.sln
rust/hi_cargo/: Cargo.toml
up-wind/: centerline.gh  longitudinal_sections.gh  transverse_sections.gh
up-wind/data/01_centerline/: centerline.3dm
up-wind/data/02_transverse_sections/: transverse_sections.3dm
up-wind/data/03_longitudinal_sections/: longitudinal_sections.3dm
wooden_topo/: README.md  geotiff_from_mapterhorn_pmtiles.py  geotiff_from_mapterhorn_request.py  geotiff_to_topo_mesh.py  topo_mesh_from_geotif_heron.gh  wooden_topo.qgz
